[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Vladimir Plesovskih <vova.plesovkikh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
